--- a/app/src/main/res/layout/room_design.xml
+++ b/app/src/main/res/layout/room_design.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="180dp"
-    android:layout_height="280dp"
+    android:layout_height="167dp"
     app:cardCornerRadius="20dp"
     app:cardElevation="10dp"
     android:layout_margin="12dp"
@@ -15,13 +15,14 @@
         android:layout_height="match_parent"
         android:background="#0C200C">
 
-        <io.woong.shapedimageview.RoundSquareImageView
+        <io.woong.shapedimageview.RoundImageView
             android:id="@+id/ivRoomImg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="160dp"
+            android:layout_height="106dp"
             android:src="@drawable/room"
             app:border_color="@color/white"
             app:border_size="3dp"
+            android:layout_marginLeft="10dp"
             app:radius="10dp" />
 
         <TextView
@@ -34,43 +35,41 @@
             android:singleLine="true"
             android:text="Trippe Bed Room"
             android:textColor="@color/white"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textSize="12dp"/>
 
         <TextView
             android:id="@+id/tvRoomRate"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvroomName"
-            android:layout_marginTop="10dp"
-            android:gravity="center_horizontal"
+            android:layout_centerInParent="true"
+            android:gravity="start"
             android:singleLine="true"
             android:text="From ট 5000/night"
+            android:textSize="12dp"
             android:textColor="@color/white"
-            android:textStyle="bold"
-            android:layout_centerInParent="true"/>
+            android:textStyle="bold" />
+
 
         <TextView
             android:id="@+id/tvRoomBooking"
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
             android:layout_below="@+id/tvRoomRate"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
             android:background="@color/theme_color"
-            android:paddingStart="10dp"
+            android:gravity="center"
+            android:layout_marginTop="2dp"
             android:text="Booking Online"
-            android:textAlignment="textStart"
             android:textColor="@color/white"
-            android:textSize="20dp" />
+            android:textSize="12dp" />
 
         <io.woong.shapedimageview.CircleImageView
             android:id="@+id/ivnext"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_below="@+id/tvRoomRate"
-            android:layout_marginTop="5dp"
             android:layout_toEndOf="@+id/tvRoomBooking"
             android:src="@drawable/next"
             app:border_color="@color/theme_color"
