--- a/app/src/main/res/layout/activity_room_details.xml
+++ b/app/src/main/res/layout/activity_room_details.xml
@@ -7,13 +7,28 @@
     tools:context=".Activity.RoomDetailsActivity"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.Toolbar
+    <Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="Room Booking"
-        android:background="@color/theme_color"
-        app:navigationIcon="@drawable/back"
-        app:titleTextColor="@color/white" />
+        android:background="@color/theme_color">
+
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/back"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Room Booking"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_gravity="center"/>
+
+
+    </Toolbar>
 
     <ImageView
         android:layout_width="match_parent"
