--- a/app/src/main/res/layout/activity_congratulation.xml
+++ b/app/src/main/res/layout/activity_congratulation.xml
@@ -22,6 +22,7 @@
             android:textColor="#E53935" />
 
         <TextView
+            android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Your Food Order Successfully Done."
